@@ -1,5 +1,9 @@
 2004-12-09  Christophe Fergeau  <teuf@gnome.org>
 
+	* po/Makefile.in.in: sync with upstream changes
+
+2004-12-09  Christophe Fergeau  <teuf@gnome.org>
+
 	* freedesktop.org.xml:
 	* freedesktop.org.xml.in: back out DTD change which wasn't expected in
 	the first place.
